erDiagram
    MEMBER {
        int member_id PK
        string name
        string email
        string mobile
        date date_of_birth
        date started_date
        date expired_date
        int points
    }

    CUSTOMER {
        int customer_id PK
        string customer_type  
        int member_id FK      
    }

    SALES {
        int sale_id PK
        date sale_date
        float total_amount
        int customer_id FK
        int staff_id FK
        int coupon_id FK
    }

    SALES_ITEM {
        int sale_item_id PK
        int sale_id FK
        int product_id FK
        int quantity
        float unit_price
        float subtotal
    }

    PRODUCT {
        int product_id PK
        string product_name
        string category
        float price
        int stock_qty
    }

    STAFF {
        int staff_id PK
        string staff_name
        string role
        string email
        string phone
        date hire_date
        float salary
        string status
        string shift_type
    }

    STAFF_SHIFT {
        int shift_id PK
        int staff_id FK
        date shift_date
        string start_time
        string end_time
        string shift_role
        string status
    }

    STAFF_ATTENDANCE {
        int attendance_id PK
        int staff_id FK
        datetime check_in
        datetime check_out
        string status
    }

    COUPON {
        int coupon_id PK
        string coupon_code
        int discount_value
        date valid_from
        date valid_to
    }

    INVENTORY {
        int inventory_id PK
        string item_name
        string unit          
        int quantity         
        int min_threshold    
        string status       
        string type  
    }        

    INVENTORY_LOG {
        int log_id PK
        int inventory_id FK
        string action_type   
        int quantity_change  
        date action_date
        int staff_id FK
        string note
    }

    MACHINE {
        int machine_id PK
        string machine_name
        string machine_type
        date purchase_date
        string status
        string location
    }

    MACHINE_MAINTENANCE {
        int maintenance_id PK
        int machine_id FK
        int staff_id FK
        date maintenance_date
        string action_type
        string note
    }

    MEMBER ||--|| CUSTOMER : "is a"
    MEMBER ||--o{ COUPON : "have"

    CUSTOMER ||--o{ SALES : "make"
    SALES ||--o{ SALES_ITEM : "contain"
    PRODUCT ||--o{ SALES_ITEM : "sold"
    STAFF ||--o{ SALES : "process"
    COUPON ||--o{ SALES : "applie"

    INVENTORY ||--o{ INVENTORY_LOG : "has log"
    STAFF ||--o{ INVENTORY_LOG : "perform"

    MACHINE ||--o{ MACHINE_MAINTENANCE : "has maintenance"
    STAFF ||--o{ MACHINE_MAINTENANCE : "perform"

    STAFF ||--o{ STAFF_SHIFT : "assigned to"
    STAFF ||--o{ STAFF_ATTENDANCE : "record"
